Theme update: Switch to Cyber Teal palette and ensure Java 17 compatibility